# stb-core

./: CITATION.cff  Cargo.toml  LICENSE  README.md  ROADMAP.md
docs/: architecture.md  glossary.md
src/: lib.rs
