[package]
name = "stb-core"
version = "0.2.0"
edition = "2021"
authors = ["Daniel da Silva Matos Júnior <d.matosjunior12@gmail.com>"]
description = "Reference implementation of Structural Generative Transmission (STB) framework"
license = "MIT"
repository = "https://github.com/dmatosjunior12-hub/stb-core"
keywords = ["compression", "generative", "bio-inspired", "virtual-machine", "codec"]
categories = ["compression", "encoding"]

[dependencies]
sha2 = "0.10"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }

[features]
default = []
zstd = ["dep:zstd"]

[dependencies.zstd]
version = "0.13"
optional = true
